--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,99 @@
 language: python
-install: pip install -U pip setuptools wheel
-matrix:
-  fast_finish: true
+stages:
+  - linting
+  - install
+  - run
+  - deploy
+
+jobs:
   include:
-    - python: "3.5.3"
-      env: PUBLISH=false
-    - python: "3.6"
-      env: PUBLISH=true
-  allow_failures:
-    - python: "3.7"
-      dist: xenial
+    #Linting
+    - stage: linting
+      install: pip install pycodestyle
+      name: "Linting with pycodestyle"
+      python: "3.6"
+      script: find . -name \*.py -exec pycodestyle {} +
+    - stage: linting
+      install: pip install pydocstyle
+      name: "Linting with pydocstyle"
+      python: "3.6"
+      script: find . -name \*.py -exec pydocstyle {} +
+    - stage: linting
+      install: pip install pylint
+      name: "Linting with pylint"
+      python: "3.6"
+      script: find . -name \*.py -exec pylint --disable=F0401,W0613,R0801 {} +
+    - stage: linting
+      install: pip install pyflakes
+      name: "Linting with pyflakes"
+      python: "3.6"
+      script: find . -name \*.py -exec pyflakes {} +
+    - stage: linting
+      install: pip install flake8
+      name: "Linting with flake8"
+      python: "3.6"
+      script: find . -name \*.py -exec flake8 {} +
 
-script:
-  - python setup.py test
+    # Test install the module
+    - stage: install
+      install: pip install -U pip setuptools wheel
+      name: "Setup test"
+      python: "3.6"
+      script:
+        - python setup.py install
 
-deploy:
-  provider: pypi
-  user: "$PYPIUSER"
-  password: "$PYPIKEY"
-  on:
-    branch: master
-    condition: $PUBLISH = true
+    # Run functions
+    - stage: run
+      install: pip install -U pip setuptools wheel
+      name: "Run with Python 2.7"
+      python: "2.7"
+      script:
+        - python setup.py install
+        - python -c"import pyruter; print(pyruter.self_test())"
+    - stage: run
+      install: pip install -U pip setuptools wheel
+      name: "Run with Python 3.4"
+      python: "3.4"
+      script:
+        - python setup.py install
+        - python -c"import pyruter; print(pyruter.self_test())"
+    - stage: run
+      install: pip install -U pip setuptools wheel
+      name: "Run with Python 3.5"
+      python: "3.5"
+      script:
+        - python setup.py install
+        - python -c"import pyruter; print(pyruter.self_test())"
+    - stage: run
+      install: pip install -U pip setuptools wheel
+      name: "Run with Python 3.6"
+      python: "3.6"
+      script:
+        - python setup.py install
+        - python -c"import pyruter; print(pyruter.self_test())"
+    - stage: run
+      install: pip install -U pip setuptools wheel
+      name: "Run with Python 3.6-dev"
+      python: "3.6-dev"
+      script:
+        - python setup.py install
+        - python -c"import pyruter; print(pyruter.self_test())"
+    - stage: run
+      install: pip install -U pip setuptools wheel
+      name: "Run with Python 3.7-dev"
+      python: "3.7-dev"
+      script:
+        - python setup.py install
+        - python -c"import pyruter; print(pyruter.self_test())"
+
+    # Deploy to PyPi if all tests pass and change was done on master.
+    - stage: deploy
+      name: "Deploy to PyPi"
+      install: pip install -U pip setuptools wheel
+      script: skip
+      deploy: &pypi
+        provider: pypi
+        user: "$PYPIUSER"
+        password: "$PYPIKEY"
+        #on:
+        #  tags: true
